[gd_scene load_steps=2 format=2]

[ext_resource path="res://Players/AIController.gd" type="Script" id=1]

[node name="AI" type="Node2D"]
script = ExtResource( 1 )

[node name="DecisionTimer" type="Timer" parent="." groups=["InGameTimers"]]
one_shot = true

[node name="StateLabel" type="Label" parent="."]
margin_left = -19.0
margin_top = -21.0
margin_right = 21.0
margin_bottom = -7.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="DecisionTimer" to="." method="_on_DecisionTimer_timeout"]
